# DeepLearning

./: .gitignore
DL/: pyproject.toml
DL/dl/: get_image_data.py  initial_CNN_model.py  manipulate_image_data.ipynb  preprocessing.ipynb  preprocessing_image_data.py  preprocessing_old.ipynb  preprocessing_tomatoes.ipynb  single_image_prediction.py  test_file_pull.py  test_initial_CNN_model.py  visualization.ipynb
DL/dl/data/metadata/: all.parquet  test.parquet  train.parquet  val.parquet
