[tool.poetry]
name = "dl"
version = "0.1.0"
description = ""
authors = ["Floor99 <floorhalkes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
pyarrow = "^15.0.2"
torchvision = "^0.17.1"
opencv-python = "^4.9.0.80"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
